# Project_SmartSales_API

./: .gitignore  Dockerfile  README.md  compose.yaml  env-exemple  pyproject.toml
migrations/: env.py
migrations/versions/: 0d7192680dfb_add_search_databae_llm_groq.py  24bd8e06d63d_fix_clients_owner_lazy.py  66a6a1b71d00_add_search_com_llm_groq.py  b02fb126d8d4_initial_schema_with_products_clients_.py  b3ee8e51abe0_fix_clients_owner.py  cc15e059097b_fix_orders.py  d2e7c2c5a7d9_fix_clients_owner_2.py  e219f572945d_initial_schema_with_products_clients_.py
smartsales/controllers/: auth_controller.py  clients_controller.py  orders_controller.py  products_controller.py  search_controller.py
smartsales/core/: app.py  database.py  security.py  settings.py
smartsales/models/: __init__.py  auth.py  clients.py  orders.py  products.py  search.py
smartsales/routers/: auth_router.py  clients_router.py  orders_router.py  products_router.py  search_router.py
smartsales/schemas/: auth_schema.py  clients_schema.py  orders_schema.py  products_schema.py  search_schema.py
smartsales/services/: auth_service.py  clients_service.py  orders_service.py  products_service.py  search_service.py
smartsales/utils/: validators.py
tests/: conftest.py  test_app.py
